# proi-chess

./: .gitignore  CMakeLists.txt  README.md
docs/: class-diagram.vpd
src/bot/: CMakeLists.txt  ChessBot.cpp  ChessBot.h  StockfishBot.cpp  StockfishBot.h
src/chess/: Board.cpp  Board.h  CMakeLists.txt  ChessExceptions.h  Color.h  FENParser.cpp  FENParser.h  Field.cpp  Field.h  Game.cpp  Game.h  GameOver.h  GameState.cpp  GameState.h  HistoryManager.cpp  HistoryManager.h  Match.cpp  Match.h  Move.cpp  Move.h  Piece.h  PieceType.h  Player.cpp  Player.h  Position.cpp  Position.h  constants.h
src/chess/exceptions/: FenException.h  IllegalMoveException.h  PieceNotOnBoardException.h
src/chess/pieces/: BasePiece.cpp  BasePiece.h  Bishop.cpp  Bishop.h  GameOver.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PieceType.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/cli/: CLIExceptions.h  CMakeLists.txt  InvalidPlayerInputException.h  main.cpp
src/gui/: CMakeLists.txt  ChessIcons.cpp  ChessIcons.h  ClickableLabel.cpp  ClickableLabel.h  GameField.cpp  GameField.h  GameHandler.cpp  GameHandler.h  QTCMakeLists.txt  clickable_label.cpp  clickable_label.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sources.qrc
tests/: test.cpp
tests/bot/: test.cpp
tests/chess/: BoardUnitTest.cpp  CMakeLists.txt  FENParserUnitTest.cpp  FieldUnitTest.cpp  GameTest.cpp  GameUnitTest.cpp  MoveUnitTest.cpp  PawnUnitTest.cpp  PlayerUnitTest.cpp  PositionUnitTest.cpp  common.cpp  common.h  test.cpp
tests/chess/pieces/: BishopUnitTest.cpp  KingUnitTest.cpp  KnightUnitTests.cpp  PawnUnitTest.cpp  QueenUnitTest.cpp  RookUnitTest.cpp
